--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@expo/config-plugins": "~9.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^5.0.6",
     "@react-navigation/native": "^7.0.0",
     "ajv": "^8.17.1",
     "expo": "^52.0.0",
@@ -32,7 +33,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
