--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
@@ -48,6 +49,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-onboarding-swiper": "^1.1.9",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^9.14.0",
     "eslint-plugin-react": "^7.37.2",
@@ -56,6 +58,7 @@
     "globals": "^15.11.0",
     "jest": "~29.7.0",
     "jest-expo": "^52.0.0",
+    "prettier": "^3.4.2",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.3.3",
