--- a/package.json
+++ b/package.json
@@ -32,31 +32,32 @@
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
-    "react-native-gesture-handler": "^2.20.2",
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@eslint/js": "^9.14.0",
+    "@eslint/js": "^9.17.0",
     "@react-native-community/cli": "^15.1.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
-    "eslint": "^9.14.0",
-    "eslint-plugin-react": "^7.37.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "eslint": "^8.57.1",
+    "eslint-config-expo": "~8.0.1",
+    "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "globals": "^15.11.0",
     "jest": "~29.7.0",
     "jest-expo": "^52.0.0",
     "prettier": "^3.4.2",
