--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-navigation/native": "^7.0.0",
     "ajv": "^8.17.1",
-    "expo": "^52.0.0",
+    "expo": "~52.0.25",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.9",
-    "expo-splash-screen": "~0.29.13",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
-    "expo-web-browser": "~14.0.1",
+    "expo-linking": "~7.0.4",
+    "expo-router": "~4.0.16",
+    "expo-splash-screen": "~0.29.20",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-web-browser": "~14.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-progress": "^5.0.1",
@@ -59,7 +59,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "~29.7.0",
-    "jest-expo": "^52.0.0",
+    "jest-expo": "~52.0.3",
     "prettier": "^3.4.2",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
